name:                mockio

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.4.1
synopsis:            Mock IO actions (e.g., for dry-runs)
description:         Mock IO actions (e.g., for dry-runs)
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    MockIO
                    , MockIO.DoMock
  other-modules:
  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , RankNTypes
                    , UnicodeSyntax
  build-depends:      base, deepseq, lens, mtl, tasty, tasty-hunit, text

                    , monaderror-io >= 1.2.0.0
                    , monadio-plus  >= 2.0.0.0
                    , more-unicode  >= 0.0.16.0
                    , tasty-plus    >= 1.5.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite mockio-test
  default-extensions: NoImplicitPrelude
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            mockio-test.hs
  build-depends:      base, mockio, tasty
  default-language:   Haskell2010

-------------------------------------------------------------------------------
